# claude-code-agent

./: .ansible-lint  .gitignore  ANALYSIS_SUMMARY.md  CHANGELOG.md  COMPLIANCE_TESTING_REPORT.md  EXPERT_SYSTEM_BLUEPRINT.md  FEATURES.md  FOOTER_SHELL_IMPLEMENTATION.md  Makefile  ORCHESTRATION_ANALYSIS.md  ORCHESTRATION_PATTERNS.md  ORCHESTRATION_QUICKREF.md  PHASES.md  PLAN.md  README.md  REFACTORING_SUMMARY.md  ansible.cfg  grind-dashboard-tasks.yaml  grind-error-handling-tasks.yaml  grind-fusion-tasks.yaml  grind-injection-enhancement-tasks.yaml  grind-server-tasks.yaml  grind.py  mkdocs.yml  orchestration-phase2-3.yaml  orchestration-phase4.yaml  phase4-polish.yaml  pthread-tasks.yaml  pyproject.toml  trivy-fs-report.json
.claude/: settings.json
.claude/commands/: INSTALL.md  README.md  generate-tasks.md
.claude/hooks/: bash-guard.sh
.github/: GITHUB_METADATA.md
.pai-experts/grind/: expertise.yaml  raw_trajectories
.pai-experts/grind/prompts/: question.md
.pai-memory/: memory.db
.scannerwork/: report-task.txt
docs/: MIGRATION.md  architecture.md  dag-execution-design.md  demo-phase-a.md  grind-server.md  index.md  migration-programmatic-injection.md  programmatic-injection.md  task-schema.md  tui.md
docs/architecture/: orchestration-implementation.md  orchestration-vision.md  overview.md  phase4-tui-orchestrator.md
docs/development/: testing.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: dag-execution.md  decompose.md  features.md  git-worktrees.md  model-selection.md  slash-commands.md  using-with-claude-code.md
docs/sdk/: claude_max_workaround.md  typescript-reference.md
docs/sdk_reference/: python_sdk_reference.md  streaming_input.md
examples/: README.md  decompose-example.sh  example-tasks.yaml  tasks.yaml
grind/: __init__.py  agents.py  batch.py  cli.py  compare.py  contract.py  dag.py  engine.py  executor.py  fusion.py  fusion_prompts.py  hooks.py  hooks_config.py  interactive.py  interactive_v2.py  logging.py  merge.py  models.py  orchestrator.py  prompts.py  router.py  tasks.py  team.py  tmux.py  utils.py  worktree.py
grind/observer/: __init__.py  models.py  server.py  store.py
grind/orchestration/: __init__.py  agent.py  events.py  grind_agent.py  metrics.py  orchestrator.py
grind/providers/: __init__.py  claude.py  openrouter.py  openrouter_tools.py
grind/server/: __init__.py  app.py  cli.py  daemon.py  exceptions.py  logging.py  metrics.py
grind/server/models/: __init__.py  requests.py  responses.py  state_machine.py
grind/server/routes/: __init__.py  health.py  sessions.py  websocket.py
grind/server/services/: __init__.py  event_bridge.py  event_log.py  session_manager.py
grind/tui/: __init__.py  app.py  main.py
grind/tui/core/: __init__.py  (+6 more)
playbooks/: bootstrap.yml  gitops-reconcile.yml
scripts/: run-sox-critical-tests.sh  sync-sdk-docs.py
site/: 404.html  index.html  sitemap.xml
site/MIGRATION/: index.html
site/architecture/: index.html
site/dag-execution-design/: index.html
site/search/: search_index.json
site/tui/: index.html
src/grind_loop/: __init__.py  batch.py  cli.py  core.py  decompose.py
tests/: conftest.py  test_agent_dashboard.py  test_batch.py  test_cleanup.py  test_cli.py  test_cli_run.py  test_cli_unchanged.py  test_compare.py  test_compare_cleanup.py  test_concurrency.py  test_core.py  test_dag.py  test_dag_execution.py  test_decompose.py  test_engine.py  test_engine_provider_path.py  test_error_handling.py  test_executor.py  test_footer_shell.py  test_footer_shell_e2e.py  test_footer_shell_visibility.py  test_fusion.py  test_hook_triggers.py  test_hooks.py  test_injection_integration.py  test_integration.py  test_interactive.py  test_interactive_v2.py  test_logging_session.py  test_merge.py  test_models.py  test_openrouter_provider.py  test_openrouter_tools.py  test_orchestration_agent.py  test_orchestration_core.py  test_orchestration_events.py  test_phase1_e2e.py  test_phase2_e2e.py  test_phase3_e2e.py  test_phase4_e2e.py  (+19 more)
tests/integration/: README.md  __init__.py  conftest.py  test_audit_trail.py  test_concurrent_operations.py
tests/manual/: tui_smoke_test.md
tests/utils/: async_helpers.py  mock_builders.py  test_async_helpers.py  test_mock_builders.py
(+48 files in other folders)
