[project]
name = "grind-loop"
version = "0.1.0"
description = "Automated fix-verify loops using Claude Agent SDK"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "playwright>=1.40.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
grind = "grind.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["grind"]

[tool.hatch.build.targets.wheel]
packages = ["grind"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["grind"]
branch = true
omit = ["grind/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
fail_under = 30
show_missing = true

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "playwright>=1.40.0",
]
