[project]
name = "grind-loop"
version = "0.1.0"
description = "Automated fix-verify loops using Claude Agent SDK"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "httpx>=0.27.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "pyyaml>=6.0",
    "textual>=0.40.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "playwright>=1.40.0",
    "pytest-cov>=4.0.0",
    "textual-dev",
]

[project.scripts]
grind = "grind.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["grind"]

[tool.hatch.build.targets.wheel]
packages = ["grind"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: Integration tests requiring MinIO/external services",
    "sox_critical: SOX-critical tests that MUST pass in production (100% required)",
    "security: Security control tests (authentication, authorization, input validation)",
    "worm: WORM immutability tests (deletion/modification prevention)",
    "audit_trail: Audit logging and trail completeness tests",
    "authorization: Authorization and access control tests",
    "concurrency: Threading and race condition tests",
    "production_smoke: Production configuration validation tests",
]

[tool.coverage.run]
source = ["grind"]
branch = true
omit = ["grind/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
fail_under = 30
show_missing = true

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "playwright>=1.40.0",
    "bandit>=1.9.2",
]
